--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.3.0",
     "react-native-vector-icons": "^8.1.0",
+    "react-native-webview": "^11.6.4",
     "shortid": "^2.2.16"
   },
   "devDependencies": {
